--- a/non_detection_simulation.Rmd
+++ b/non_detection_simulation.Rmd
@@ -34,62 +34,54 @@ rio,        # to import data
 options(digits = 4)
 ```
 
-```{r}
-
-
-predisposition.naive <- c(runif(200,min=0.55,max=1)
-                    ,runif(100,min=0.45,max=0.55)
-                    ,runif(200,min=0,max=0.45))
-
-# the number to change from low disposition to high
-proportion.detection.error<-0.05 #1-SE
-trim.predisp<-round(length(predisposition.naive)*
-                      proportion.detection.error)
-
-
-predisposition <- head(predisposition.naive,-trim.predisp)
-predisposition <- c(predisposition,runif(trim.predisp,min=0.55,max=1))
-
-df<-data.frame(predisposition.naive = predisposition.naive
-               ,predisposition = predisposition
-               ,observed_rupture=c(rep(1,200)
-                     ,sample(c(0,1), replace=TRUE, size=100)
-                     ,rep(0,200)))
-```
-
 
 
 ```{r}
+
+loop_fun<-function(num_iter=1000,num_wrong=15,b0=1,b1=1,randomly.rupture=FALSE){
 
 fisher.b<-NULL
 coef.pvalues<-NULL
 
-for(i in 1:300){
+for(i in 1:num_iter){
 
-predisposition=rbeta(500,2,2)  #upsidedown U
+#predisposition<-rbeta(500,2,2)  #upsidedown U
 #predisposition=rbeta(500,.5,.5) #u shape
-#predisposition=rbeta(500,1,1) #uniform
+predisposition.orig=rbeta(500,1,1) #uniform
+
+predisposition<-(1+exp(-(b0+b1*predisposition.orig)))^(-1)
 
 naive.rupture<-rbinom(length(predisposition),size=1,predisposition)
 
 observed.rupture<-naive.rupture
 
-observed.rupture[sample(which(naive.rupture==1)
-                                       ,100)]<-0
+if (randomly.rupture){
+#this randomly samples cases that ruptured ("1") and assigns them 0, even with low predisposition.orig
+observed.rupture[sample(which(observed.rupture==1)
+                         ,num_wrong)]<-0
+
+} else
+{
+# this randomly samples cases that ruptured ("1") between(predisposition.orig,0.5,0.7)
+# and assigns them 0.
+
+
+ observed.rupture[sample(observed.rupture[observed.rupture==1 &
+                                 predisposition.orig>0.4]
+                          ,num_wrong)]<-0
+
+ }
+
 
 df<-data.frame(predisposition=predisposition
                ,naive.rupture=naive.rupture
                ,observed.rupture=observed.rupture)
 
 m.naive<- glm(naive.rupture ~ predisposition, family="binomial",data=df)
-#summary(m.naive)
-#print(coef(summary(m.naive))[,4])
+
 
 m2<- glm(observed.rupture ~ predisposition, family="binomial",data=df)
-#summary(m2)
 
-#print("diff in coeff, closer to 1 is more different")
-#print((m.naive$coefficients - m2$coefficients)/abs(m.naive$coefficients))
 
 fisher.b<-c(fisher.b,(coef(summary(m2))[,1] - coef(summary(m.naive))[,1])/abs(coef(summary(m.naive))[,1]))
 
@@ -105,27 +97,118 @@ foo<-data.frame(fisher.b=t(matrix(fisher.b,nrow=2))
          ,naive.p.coef=pvalues.2
          ,observed.m.p.intercept=pvalues.3
          ,observed.m.p.coef=pvalues.4) %>% 
+  mutate(naive.p.smaller=ifelse(naive.p.coef<observed.m.p.coef,1,0)) %>% 
   mutate(naive.signif=ifelse(naive.p.coef>0.05,0,1)) %>% 
   mutate(observed.m.signif=ifelse(observed.m.p.coef>0.05,0,1)) %>% 
-  mutate(diff.inference=ifelse(observed.m.signif==naive.signif,0,1))
+  mutate(opposite.inference=ifelse(observed.m.signif==naive.signif,0,1)) 
 
+# return(foo %>% dplyr::select(fisher.b.coef
+#                              ,naive.p.coef
+#                              ,observed.m.p.coef
+#                              ,opposite.inference
+#                              ,naive.p.smaller))
+return(foo)
+}
 
 ```
 
 
+https://www.graphpad.com/guides/prism/latest/curve-fitting/reg_simple_logistic_coefficients.htm
+
 ```{r}
-tbl_summary(foo)
+
+
+#this should be 5% and 10% of 250, the "0" cases, not 5% of 500 observations
+#BE CAREFUL these fisher B's are only for cases with at least one p<0.05.
+
+bb0<- -1   #intercept
+bb1<-2  #slope
+
+#set1<-loop_fun(b0=bb0,b1=bb1,num_wrong=15,randomly.rupture=TRUE)
+set2<-loop_fun(b0=bb0,b1=bb1,num_wrong=15,randomly.rupture=FALSE)
+#set3<-loop_fun(b0=bb0,b1=bb1,num_wrong=30,randomly.rupture=TRUE)
+set4<-loop_fun(b0=bb0,b1=bb1,num_wrong=30,randomly.rupture=FALSE)
+
+
+# t1<-set1 %>% 
+#   filter(naive.p.coef<0.05|observed.m.p.coef<0.05) %>% 
+#   dplyr::select(opposite.inference,naive.p.smaller) %>% 
+#   tbl_summary(statistic = list(
+#       all_continuous() ~ "{median} ({IQR})",
+#       all_categorical() ~ "{n} / {N} ({p}%)"))
+
+t2<-set2 %>% 
+  filter(naive.p.coef<0.05|observed.m.p.coef<0.05) %>% 
+   dplyr::select(opposite.inference,naive.p.smaller) %>% 
+  tbl_summary(statistic = list(
+      all_continuous() ~ "{median} ({IQR})",
+      all_categorical() ~ "{n} / {N} ({p}%)"))
+
+# t3<-set3 %>%
+#   filter(naive.p.coef<0.05|observed.m.p.coef<0.05) %>%
+#    dplyr::select(opposite.inference,naive.p.smaller) %>% 
+#   tbl_summary(statistic = list(
+#       all_continuous() ~ "{median} ({IQR})",
+#       all_categorical() ~ "{n} / {N} ({p}%)"))
+
+t4<-set4 %>%
+  filter(naive.p.coef<0.05|observed.m.p.coef<0.05) %>%
+   dplyr::select(opposite.inference,naive.p.smaller) %>% 
+  tbl_summary(statistic = list(
+      all_continuous() ~ "{median} ({IQR})",
+      all_categorical() ~ "{n} / {N} ({p}%)"))
+
+#this should be 5% and 10% of 250, not 500
+
+tbl_merge(list(t2,t4),
+          tab_spanner = c("**not random 5%**"
+                          ,"**not random 10%**"
+                          ))
+
+
+
+head(set2 %>% dplyr::select(naive.p.coef,observed.m.p.coef))
 ```
 
-
 ```{r}
-hist(predisposition)
+
+t1<-set1 %>% 
+  dplyr::select(fisher.b.coef) %>% 
+  tbl_summary(statistic = list(
+      all_continuous() ~ "{median} ({IQR})",
+      all_categorical() ~ "{n} / {N} ({p}%)"),
+      digits = everything()~ 5)
+
+t2<-set2 %>% 
+   dplyr::select(fisher.b.coef) %>% 
+  tbl_summary(statistic = list(
+      all_continuous() ~ "{median} ({IQR})",
+      all_categorical() ~ "{n} / {N} ({p}%)"))
+
+t3<-set3 %>%
+   dplyr::select(fisher.b.coef) %>% 
+  tbl_summary(statistic = list(
+      all_continuous() ~ "{median} ({IQR})",
+      all_categorical() ~ "{n} / {N} ({p}%)"))
+
+t4<-set4 %>%
+   dplyr::select(fisher.b.coef) %>% 
+  tbl_summary(statistic = list(
+      all_continuous() ~ "{median} ({IQR})",
+      all_categorical() ~ "{n} / {N} ({p}%)"))
+
+#this should be 5% and 10% of 250, not 500
+
+tbl_merge(list(t2,t4,t1,t3),
+          tab_spanner = c("**not random 5%**"
+                          ,"**not random 10%**"
+                          ,"**random 5%**"
+                          ,"**random 10%**"))
+
+
+
 ```
-
-
 ```{r}
-ggplot(df, aes(x=predisposition, y=naive.rupture)) + geom_point() +
-      stat_smooth(method="glm", color="green", se=FALSE,
-                method.args = list(family=binomial))
+head(set1 %>% dplyr::select(fisher.b.coef),100)
 ```
 
