--- a/three_sim_datasets.Rmd
+++ b/three_sim_datasets.Rmd
@@ -25,123 +25,94 @@ rio,        # to import data
 options(digits = 4)
 ```
 
-```{r}
-#goo<-runif(10)
-goo<-c(.01,.5,.999999)
-(1+exp(-(-2+.001*goo)))^(-1)
-(1+exp(-(-2+1*goo)))^(-1)
-(1+exp(-(-2+5*goo)))^(-1)
-
-cor(goo,(1+exp(-(-2+.001*goo)))^(-1))
-```
 Above, Clearly the predictions would be bad for models with the slope near 0 (OR near 1) However, the inferences still seem OK. Changing a few 1s to 0s must weaken the model fit but not change the value of the slope much.
 
 ```{r}
-b0<- 1   #intercept exp(bb0) is the baseline rupture rate more or less
-b1<- 1  #slope
-num_wrong<-15
 
+num_wrong<-15 # 5 percent of naive rupture =0 dogs
+
+##control the overlap of the pos and unlabeled cases
+#larger is less overlap
+var.importance<-0.01
+
+##cutoff for relabeling
+#larger makes 
+label.cut<-0.5
+#--------------------------------------
 fisher.b<-NULL
 coef.pvalues<-NULL
 naive.coef<-NULL
-m2.coef<-NULL
+labeled.coef<-NULL
 
-for(i in 1:1000){
+for(i in 1:5000){
 
-#predisposition<-rbeta(500,2,2)  #upsidedown U
-#predisposition<-rbeta(500,.5,.5) #u shape
-predisposition.orig<-runif(500) #uniform
-#predisposition.orig<-c(runif(250,0,0.95),runif(250,0.05,1))
+##this is how the dogs are predisposed to CCLR
+#the first 250 will have rupture=0 (for the naive model)
+#the second 250 will have rupture=1
+predisposition<-c(runif(300,0,(1-var.importance)),runif(300,var.importance,1))
 
-predisposition<-predisposition.orig
-#predisposition<-(1+exp(-(b0+b1*predisposition.orig)))^(-1)
-
-# 
-
-#naive.rupture<-rbinom(length(predisposition),size=1,predisposition)
-#
-
-#naive.rupture<-as.integer(predisposition>runif(500))
-naive.rupture<-c(rep(0,250),rep(1,250))
-
-observed.rupture<-naive.rupture
+naive.rupture<-c(rep(0,300),rep(1,300))
 
 
- observed.rupture[
-   sample(which(observed.rupture==1 & predisposition>0.4),num_wrong)
+labeled.rupture<-naive.rupture
+
+##this converts naive model to labeled model
+#the key part is the cutoff. Smaller makes naive vs labeled more different
+labeled.rupture[
+   sample(which(labeled.rupture==1 & predisposition>label.cut),num_wrong)
    ]<-0
-
-
 
 
 df<-data.frame(predisposition=predisposition
                ,naive.rupture=naive.rupture
-               ,observed.rupture=observed.rupture)
+               ,labeled.rupture=labeled.rupture)
 
 m.naive<- glm(naive.rupture ~ predisposition, family="binomial",data=df)
 
 
-m2<- glm(observed.rupture ~ predisposition, family="binomial",data=df)
+m.labeled<- glm(labeled.rupture ~ predisposition, family="binomial",data=df)
 
 
-fisher.b<-c(fisher.b,(coef(summary(m2))[,1] - coef(summary(m.naive))[,1])/abs(coef(summary(m.naive))[,1]))
+fisher.b<-c(fisher.b,(coef(summary(m.labeled))[,1] - coef(summary(m.naive))[,1])/abs(coef(summary(m.naive))[,1]))
 
-coef.pvalues<-c(coef.pvalues,coef(summary(m.naive))[,4],coef(summary(m2))[,4])
+coef.pvalues<-c(coef.pvalues,coef(summary(m.naive))[,4],coef(summary(m.labeled))[,4])
 
 naive.coef<-c(naive.coef,coef(summary(m.naive))[,1][2])
-m2.coef<-c(m2.coef,coef(summary(m2))[,1][2])
+labeled.coef<-c(labeled.coef,coef(summary(m.labeled))[,1][2])
 
   } #end loop
 
 foo<-data.frame(fisher.b=t(matrix(fisher.b,nrow=2))
            ,pvalues=t(matrix(coef.pvalues,nrow=4))
            ,naive.coef=naive.coef
-           ,m2.coef=m2.coef) %>% 
+           ,labeled.coef=labeled.coef) %>% 
   rename(fisher.b.intercept=fisher.b.1
          ,fisher.b.coef=fisher.b.2
          ,naive.p.intercept=pvalues.1
          ,naive.p.coef=pvalues.2
-         ,observed.m.p.intercept=pvalues.3
-         ,observed.m.p.coef=pvalues.4) %>% 
-  mutate(naive.p.smaller=ifelse(naive.p.coef<observed.m.p.coef,1,0)) %>% 
+         ,labeled.p.intercept=pvalues.3
+         ,labeled.p.coef=pvalues.4) %>% 
+  mutate(naive.p.smaller=ifelse(naive.p.coef<labeled.p.coef,1,0)) %>% 
   mutate(naive.signif=ifelse(naive.p.coef>0.05,0,1)) %>% 
-  mutate(observed.m.signif=ifelse(observed.m.p.coef>0.05,0,1)) %>% 
-  mutate(opposite.inference=ifelse(observed.m.signif==naive.signif,0,1)) 
-
-# return(foo %>% dplyr::select(fisher.b.coef
-#                              ,naive.p.coef
-#                              ,observed.m.p.coef
-#                              ,opposite.inference
-#                              ,naive.p.smaller))
-
-```
+  mutate(labeled.m.signif=ifelse(labeled.p.coef>0.05,0,1)) %>% 
+  mutate(opposite.inference=ifelse(labeled.m.signif==naive.signif,0,1)) %>% 
+  mutate(OR.naive.coef=exp(naive.coef)) %>% 
+  mutate(OR.labeled.coef=exp(labeled.coef))
 
 
-https://www.graphpad.com/guides/prism/latest/curve-fitting/reg_simple_logistic_coefficients.htm
-
-```{r}
 
 
-#this should be 5% and 10% of 250, the "0" cases, not 5% of 500 observations
-#BE CAREFUL these fisher B's are only for cases with at least one p<0.05.
-
-
-foo %>% 
-  filter(naive.p.coef<0.05|observed.m.p.coef<0.05) %>% 
+t1<-foo %>% 
+  filter(naive.p.coef<0.05|labeled.p.coef<0.05) %>% 
    dplyr::select(opposite.inference,naive.p.smaller) %>% 
   tbl_summary(statistic = list(
       all_continuous() ~ "{median} ({IQR})",
       all_categorical() ~ "{n} / {N} ({p}%)"))
 
+t2<-foo %>% tbl_summary
 
-
-foo %>% 
-   dplyr::select(fisher.b.coef) %>% 
-  tbl_summary(statistic = list(
-      all_continuous() ~ "{median} ({IQR})",
-      all_categorical() ~ "{n} / {N} ({p}%)"))
-
-
-foo %>% tbl_summary
+tbl_merge(list(t1,t2)
+          ,tab_spanner = c("**at least one p<0.05**","**all**")) %>% as_gt() %>%
+  gt::tab_options(table.font.size = "10") %>% gt::tab_options(table.font.names = "courier")
 ```
 
